[gd_scene load_steps=5 format=3 uid="uid://bjnspkce36142"]

[ext_resource type="Script" uid="uid://brnh4atjc0fjc" path="res://Scripts/UI/level_select.gd" id="1_xqnso"]
[ext_resource type="Texture2D" uid="uid://chdei1cvox1n2" path="res://Resources/UI/UX Bilder/acheron_overworld_v2.png" id="2_2wnai"]
[ext_resource type="Texture2D" uid="uid://d211feifdsoh0" path="res://Resources/UI/UX Bilder/acheron_underworld_v2.png" id="3_1i34c"]
[ext_resource type="Texture2D" uid="uid://tuiliu1byr0" path="res://Resources/UI/UX Bilder/phlegethon_v2.png" id="4_40fl8"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqnso")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 360)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
texture = ExtResource("2_2wnai")
expand_mode = 2
stretch_mode = 1
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 360)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1i34c")
expand_mode = 2
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 360)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_40fl8")
expand_mode = 2
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Acheron" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Acheron oben"

[node name="Spacing" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Phlegeton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Acheron Unten"

[node name="Spacing2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Kokytus" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Phlegeton"

[node name="Spacing2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Hauptmen√º"

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Acheron" to="." method="_on_acheron_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Phlegeton" to="." method="_on_phlegeton_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Kokytus" to="." method="_on_kokytus_button_down"]
[connection signal="button_down" from="MarginContainer/ReturnButton" to="." method="_on_return_button_button_down"]
